--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,9 +16,16 @@ a {
 }
 
 .split-plane-right-container {
-  height: 100vh;
+  height: calc(100vh - 135px);
   overflow-y: scroll;
-  width: 80%;
+  width: 100%;
+}
+
+.App,
+#__next {
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
 }
 
 .product {
