--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,5 +39,17 @@ a {
   align-items: center;
 }
 
+.productExpanded {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px 30px;
+  margin-left: 20px;
+  margin-right: 20px;
+  gap: 20px;
+  justify-content: space-between;
+  align-items: center;  
+}
+
+
 @import "../styles/index.css";
 @import "../styles/App.css";
