--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  overflow: hidden;
 }
 
 a {
@@ -28,27 +29,9 @@ a {
   height: 100vh;
 }
 
-.product {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 10px 30px;
-  margin-left: 20px;
-  margin-right: 20px;
-  gap: 20px;
-  justify-content: space-between;
-  align-items: center;
-}
 
-.productExpanded {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 10px 30px;
-  margin-left: 20px;
-  margin-right: 20px;
-  gap: 20px;
-  justify-content: space-between;
-  align-items: center;  
-}
+
+
 
 
 @import "../styles/index.css";
