--- a/styles/index.css
+++ b/styles/index.css
@@ -32,7 +32,8 @@ body {
 }
 
 .split-pane-left {
-  flex: 2 2 40%;
+  min-width: 50%;
+  flex: 2 2 60%;
   overflow: hidden;
 }
 
@@ -83,33 +84,6 @@ ul a:hover {
   color: black;
 }
 
-blockquote {
-  border-left: 10px solid #ccc;
-  margin: 5.5em 0 0 0;
-  quotes: "\201C""\201D""\2018""\2019";
-  padding: 2rem 0 1rem;
-}
-
-blockquote:before {
-  color: #ccc;
-  content: open-quote;
-  font-size: 4em;
-  line-height: 0.1em;
-  margin-right: 0.25em;
-  vertical-align: -0.4em;
-}
-
-blockquote p {
-  display: inline;
-}
-
-.quote {
-  max-width: 60%;
-  text-align: right;
-  margin: auto;
-  font-style: italic;
-}
-
 .quote span {
   font-weight: bold;
 }
@@ -122,7 +96,7 @@ header {
   align-items: center;
   justify-content: center;
   border-bottom: 2px solid black;
-  height: 90px;
+  height: 100px;
 }
 
 .main-content {
@@ -176,7 +150,7 @@ header {
   padding: 1rem 0;
   margin: 1rem 0;
   flex-wrap: wrap;
-  padding: 10px 30px;
+  padding: 10px 30px; 
   margin-left: 20px;
   margin-right: 20px;
   gap: 20px;
