--- a/styles/index.css
+++ b/styles/index.css
@@ -107,7 +107,7 @@ header {
 
 .product {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: auto 90%;
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 1rem 0;
@@ -128,11 +128,14 @@ header {
 }
 
 .product-detail {
+  display: grid;
+  grid-template-columns: auto auto;
   font-size: 100%;
   padding: 0 2rem;
   display: flex;
   gap: 10px;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 
