--- a/lib/Components/Panes/SplitPane.module.css
+++ b/lib/Components/Panes/SplitPane.module.css
@@ -1,19 +1,32 @@
 .split-pane-top,
-.split-pane-bottom,
 .split-pane-right {
   flex: 1;
   overflow: hidden;
 }
 
 .split-pane-left {
-    min-width: 50%;
-    flex: 2 2 60%;
-    overflow: hidden;
-  }
+  min-width: 50%;
+  flex: 2 2 60%;
+  overflow: hidden;
+}
 
-  .split-plane-right-container {
-    height: calc(100vh - 100px);
-    overflow-y: scroll;
-    width: 100%;
-    padding: 0 2rem;
-  }
+.split-plane-right-container {
+  height: calc(100vh - 100px);
+  overflow-y: scroll;
+  width: 100%;
+  padding: 0 2rem;
+}
+
+.split-pane-bottom {
+  flex: 1;
+  overflow: hidden;
+  text-align: left;
+  padding: 2%;
+  overflow-y: scroll;
+}
+
+.split-pane-top {
+  text-align: left;
+  padding: 2%;
+  overflow-y: scroll;
+}
