--- a/lib/Components/index/App.module.css
+++ b/lib/Components/index/App.module.css
@@ -2,6 +2,9 @@
     font-family: "Segoe UI", sans-serif;
     font-size: 1.2rem;
     text-align: center;
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
   }
 
 .split-pane-row {
