--- a/lib/Components/Products/ProductExpandedView.module.css
+++ b/lib/Components/Products/ProductExpandedView.module.css
@@ -7,11 +7,10 @@
     margin: 1rem 0;
     flex-wrap: wrap;
     padding: 10px 30px; 
-    margin-left: 20px;
-    margin-right: 20px;
     gap: 20px;
     align-items: center;
     justify-content: space-between;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;  
   }
 
   .productExpanded-images {
@@ -39,3 +38,40 @@
     display: grid;
     grid-template-columns: auto auto auto;
   }
+
+  .productExpanded-items {
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    border-color: black;
+    font-size: 100%;
+    padding: 1rem 0;
+    max-height: 400px;
+    min-width: 400px;
+    background-color: rgba(62, 137, 43, 0.2);
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;    
+   
+}
+
+.productExpanded-heading {
+  font-weight: bold;
+  font-size: 50%;
+  display: grid;
+  grid-template-columns: 100px 200px 50px;
+  text-align: left;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 5px;
+}
+
+.productExpanded-save {
+  font-size: 50%;
+  margin-top:10px;
+  margin-left:290px;
+  background-color: rgba(62, 137, 43);
+  border-color: rgba(62, 137, 43);
+  color: white;
+  border-radius: 14px;
+  border: none;
+  width:60px;
+  height:20px;
+}
