--- a/lib/Components/Products/ProductRegularView.module.css
+++ b/lib/Components/Products/ProductRegularView.module.css
@@ -2,16 +2,15 @@
     display: grid;
     grid-template-columns: auto 90%;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 3px;
     padding: 1rem 0;
     margin: 1rem 0;
     padding: 10px 30px;
-    margin-left: 20px;
-    margin-right: 20px;
     grid-gap: 20px;
     gap: 20px;
     justify-content: space-between;
     align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;  
   }
 
   .product-detail {
