--- a/lib/Components/Products/ProductExpandedView.module.css
+++ b/lib/Components/Products/ProductExpandedView.module.css
@@ -1,37 +1,19 @@
 .productExpanded {
     display: grid;
-    grid-template-columns: auto auto auto;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 1rem 0;
-    margin: 1rem 0;
-    flex-wrap: wrap;
-    padding: 10px 30px; 
+    grid-template-columns: 350px 400px;
+    flex-wrap: wrap; 
     gap: 20px;
-    align-items: center;
-    justify-content: space-between;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;  
   }
 
-  .productExpanded-images {
+  .productImageAndDescription{
     display: grid;
-    grid-template-rows: auto auto;
-    max-height: 200px;
-    margin: 20px;
-  }
-
-  .productExpanded-information {
-    margin: 20px;
-  }
-
-  .productExpanded-detail {
-    font-size: 100%;
+    grid-template-rows: 200px 200px;
+    margin-left:70px;
     text-align: left;
   }
 
   .productExpanded-description {
     font-size: 70%;
-    text-align: left;
   }
 
   .productExpanded-images-small {
@@ -56,7 +38,7 @@
   font-weight: bold;
   font-size: 50%;
   display: grid;
-  grid-template-columns: 100px 200px 50px;
+  grid-template-columns: 120px 180px 50px;
   text-align: left;
   margin-left: 20px;
   margin-right: 20px;
