--- a/lib/Components/Products/ProductRegularView.module.css
+++ b/lib/Components/Products/ProductRegularView.module.css
@@ -1,42 +1,35 @@
 .product {
     display: grid;
-    grid-template-columns: auto 90%;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    padding: 1rem 0;
-    margin: 1rem 0;
-    padding: 10px 30px;
+    grid-template-columns: 50px 700px;
     grid-gap: 20px;
-    gap: 20px;
     justify-content: space-between;
     align-items: center;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;  
+    justify-content: left;
   }
 
   .product-detail {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 600px 100px;
     font-size: 100%;
-    padding: 0 2rem;
     display: flex;
-    gap: 10px;
     flex-wrap: wrap;
     justify-content: space-between;
   }
   
   .product-priceAndInput {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto 70px;
     align-items: center;
+    margin-right: 15px;
   }
 
   .product-price {
     font-size: 70%;
-    margin: 10px;
+    margin-left: 10px;
   }
   
   .input {
-    width: 25px;
+    width: 50px;
     height: 25px;
   }
   
