--- a/lib/Components/Panes/SplitPane.module.css
+++ b/lib/Components/Panes/SplitPane.module.css
@@ -26,7 +26,8 @@
 }
 
 .split-pane-left {
-  min-width: 60%;
+  min-width: 800px;
+  height: calc(100vh - 50px);
   flex: 2 2 60%;
   overflow: hidden;
 }
