--- a/lib/Components/Products/ProductRow.module.css
+++ b/lib/Components/Products/ProductRow.module.css
@@ -5,5 +5,5 @@
     margin: 0.7rem 0; 
     align-items: center;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-    width: 820px;
+    width: auto;
   }
