--- a/lib/Components/index/App.module.css
+++ b/lib/Components/index/App.module.css
@@ -1,22 +1,41 @@
+.mainContainer {
+  width: 100vw;
+  height: 100vh;
+  max-width: 100%;
+  display: flex;
+  background-color: rgba(62, 137, 43, 0.2);
+}
+
+.secondContainer {
+  margin:auto;
+  width: 98vw;
+  height: 98vh;
+  max-width: 1600px;
+  align-items: center;
+  text-align: center;
+  background-color: rgba(255, 255, 255);
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+
 .App {
     font-family: "Segoe UI", sans-serif;
     font-size: 1.2rem;
     text-align: center;
     overflow: hidden;
-    width: 100vw;
-    height: 100vh;
   }
 
-.split-pane-row {
-    width: 100vw;
-    height: 100vh;
+  .split-pane-row {
+    width: auto;
+    height: calc(98vh - 50px);
+    max-width: 100%;
     display: flex;
     flex-direction: row;
   }
 
   .split-pane-col {
-    width: 100vw;
-    height: 100vh;
+    width: auto;
+    height: 100%;
     display: flex;
     flex-direction: column;
   }
@@ -33,15 +52,16 @@
 
   .header {
     display: grid;
-    grid-template-columns: 1200px 100px;
-    padding: 1rem 0;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    grid-template-columns: 90% 10%;
     font-weight: bold;
     font-size: 60%;
     align-items: center;
-    justify-content: center;
     border-bottom: 1px solid rgb(0, 0, 0);
     height: 50px;
     text-align: right;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   }
 
   .image {
