--- a/lib/Components/Products/ProductExpandedView.module.css
+++ b/lib/Components/Products/ProductExpandedView.module.css
@@ -1,19 +1,19 @@
 .productExpanded {
     display: grid;
-    grid-template-columns: 50px 300px 400px;
-    flex-wrap: wrap; 
-    gap: 20px;
+    grid-template-columns: 10% 40% 50%;
+    text-align: left; 
+    margin-left: 1%;
   }
 
   .productImageAndDescription{
     display: grid;
-    grid-template-rows: 200px 200px;
+    grid-template-rows: auto auto;
     text-align: left;
-    margin-left: 10px;
   }
 
   .productExpanded-description {
     font-size: 70%;
+    margin-right:20%;
   }
 
   .productExpanded-images-small {
@@ -27,10 +27,9 @@
     border-color: black;
     font-size: 100%;
     padding: 1rem 0;
-    max-height: 400px;
-    min-width: 400px;
     background-color: rgba(62, 137, 43, 0.2);
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;    
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    margin: 2%;    
    
 }
 
@@ -38,22 +37,26 @@
   font-weight: bold;
   font-size: 50%;
   display: grid;
-  grid-template-columns: 120px 180px 50px;
+  grid-template-columns: 35% 45% auto;
   text-align: left;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 5px;
+  margin-left: 5%;
+  margin-bottom: 3%;
 }
 
 .productExpanded-save {
   font-size: 50%;
   margin-top:10px;
-  margin-left:290px;
+  margin-left: 81%;
   background-color: rgba(62, 137, 43);
   border-color: rgba(62, 137, 43);
   color: white;
-  border-radius: 14px;
+  border-radius: 4px;
   border: none;
-  width:60px;
-  height:20px;
+  width:50px;
+  height:25px;
+  align-items: left;
+}
+
+.saveDiv {
+  text-align: left;
 }
