--- a/lib/Components/index/App.module.css
+++ b/lib/Components/index/App.module.css
@@ -54,7 +54,7 @@
     display: grid;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
-    grid-template-columns: 90% 10%;
+    grid-template-columns: 20% 70% 10%;
     font-weight: bold;
     font-size: 60%;
     align-items: center;
@@ -62,6 +62,12 @@
     height: 50px;
     text-align: right;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  }
+
+  .button{
+    height: 30px;
+    width: 50px;
+    align-items: bottom;
   }
 
   .image {
