--- a/lib/Components/Login/LoginPage.module.css
+++ b/lib/Components/Login/LoginPage.module.css
@@ -1,7 +1,7 @@
 .main {
   background-color: rgba(62, 137, 43, 0.2);
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-  font-family: "Segoe UI", sans-serif;
+  font-family: "Barlow", sans-serif;
   font-size: 1.2rem;
   text-align: center;
   overflow: hidden;
