--- a/lib/Components/index/App.module.css
+++ b/lib/Components/index/App.module.css
@@ -19,7 +19,7 @@
 }
 
 .App {
-  font-family: "Segoe UI", sans-serif;
+  font-family: "Barlow", sans-serif;
   font-size: 1.2rem;
   text-align: center;
   overflow: hidden;
