--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -61,7 +61,7 @@
   border-radius: 3px;
   padding: 0.75rem;
   font-size: 1.1rem;
-  font-family: "Barlow", sans-serif;
+  font-family: "Barlow";
 }
 
 .grid {
