--- a/lib/Components/MainPages/RightPane.module.css
+++ b/lib/Components/MainPages/RightPane.module.css
@@ -1,5 +1,7 @@
 .split-plane-right-container {
-  height: calc(100vh - 100px);
+  height: calc(100vh - 50px);
   width: 100%;
   padding: 0 2rem;
+  border-right: 8px solid rgb(230, 230, 230);
+  background-color: rgb(230, 230, 230);
 }
