--- a/lib/Components/ProductCatalogue/RegularView/ProductRegularView.module.css
+++ b/lib/Components/ProductCatalogue/RegularView/ProductRegularView.module.css
@@ -1,5 +1,6 @@
 .product {
   width: 100%;
+  background-color: white;
 }
 
 .product-detail {
@@ -22,4 +23,11 @@
 .input {
   width: 50px;
   height: 25px;
+  margin-left: 5%;
+  border: 1px solid rgb(230, 230, 230);
+  border-radius: 5px;
+}
+
+.input:focus {
+  outline: none;
 }
