--- a/lib/Components/ProductCatalogue/ProductCatalogue.module.css
+++ b/lib/Components/ProductCatalogue/ProductCatalogue.module.css
@@ -4,37 +4,36 @@
   padding: 0 2rem;
 }
 
-.split-plane-right-numberOfProductsInSelection {
-  margin-top: 10px;
+.numberOfProductsInSelection {
   text-align: left;
-  font-size: 80%;
-  background-color: white;
+  font-size: 100%;
+  font-weight: bold;
+  width: 100%;
 }
 
 .split-plane-right-heading {
   display: grid;
-  grid-template-columns: 60% 15% 15% 10%;
+  grid-template-columns: 10% 50% 15% 15% 10%;
   margin-top: 10px;
   text-align: left;
   align-items: center;
   font-size: 60%;
   width: 100%;
-  background-color: white;
 }
 
 .split-plane-right-rows {
   height: calc(100vh - 130px);
   overflow-y: scroll;
   width: 100%;
-  
 }
 
 .search {
   width: auto;
   margin-right: 5%;
   max-width: 300px;
+  background-color: white;
 }
 
-.background {
-  background-color: solid rgb(230, 230, 230);
+.search:focus {
+  outline: none;
 }
