--- a/lib/Components/ProductCatalogue/ProductCatalogue.module.css
+++ b/lib/Components/ProductCatalogue/ProductCatalogue.module.css
@@ -13,7 +13,7 @@
 
 .split-plane-right-heading {
   display: grid;
-  grid-template-columns: 10% 50% 15% 15% 10%;
+  grid-template-columns: 10% 25% 25% 15% 15% 10%;
   margin-top: 10px;
   text-align: left;
   align-items: center;
