--- a/lib/Components/CurrentOrder/SelectOrders.module.css
+++ b/lib/Components/CurrentOrder/SelectOrders.module.css
@@ -1,23 +1,17 @@
-.button {
-  border: 1px solid rgb(230, 230, 230);
-  background-color: white;
-  border-radius: 10px;
-  font-family: "Barlow";
-  width: 100px;
-  height: auto;
-  padding: 10px;
-  text-align: center;
-  align-content: center;
+.tr {
+  background-color: #ffffff !important;
 }
 
-.selected-button {
-  border: 1px solid rgb(230, 230, 230);
-  background-color: rgb(230, 230, 230);
-  border-radius: 10px;
-  font-family: "Barlow";
-  width: 100px;
-  height: auto;
+.tr-selected {
+  background-color: #e5e6e7 !important;
+}
+
+.th {
+  background-color: #ffffff !important;
   padding: 10px;
+  max-width: 200px;
+}
+
+.check {
   text-align: center;
-  align-content: center;
 }
